finally fixed alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,13 @@ li a {
     align-items: center;
 }
 
+.project-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .project-1 {
     position: relative;
     width: 400px;
@@ -264,7 +271,7 @@ li a {
     width: 200px;
     box-shadow: var(--shadow);
     padding: 10px;
-    margin: 0px 0px 0px 150px;
+    /* margin: 0px 0px 0px 150px; */
     font-size: large;
     font-weight: bold;
     border-radius: 6px;
